--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -862,7 +862,7 @@ jobs:
         run: |
           ftp_server="ftp://${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}@${{ secrets.FTP_SERVER }}/macOS"
           for file in *.dmg; do
-            curl -T "$file" "$ftp_server/$file"
+            curl -s --ftp-ssl -T "$file" --insecure "sftp://$ftp_server/"
           done
 
   # publish_unsigned:
@@ -1430,14 +1430,14 @@ jobs:
               deb_arch: amd64,
               vcpkg-triplet: x64-linux,
             }
-          - {
-              arch: aarch64,
-              target: aarch64-unknown-linux-gnu,
-              distro: ubuntu18.04,
-              on: [self-hosted, Linux, ARM64],
-              deb_arch: arm64,
-              vcpkg-triplet: arm64-linux,
-            }
+          # - {
+          #     arch: aarch64,
+          #     target: aarch64-unknown-linux-gnu,
+          #     distro: ubuntu18.04,
+          #     on: [self-hosted, Linux, ARM64],
+          #     deb_arch: arm64,
+          #     vcpkg-triplet: arm64-linux,
+          #   }
     steps:
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
@@ -1713,7 +1713,7 @@ jobs:
         run: |
           ftp_server="ftp://${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}@${{ secrets.FTP_SERVER }}/linux/${{ matrix.job.arch }}"
           for file in *.deb *.rpm; do
-            curl -T "$file" "$ftp_server/$file"
+            curl -s --ftp-ssl -T "$file" --insecure "sftp://$ftp_server/"
           done
 
       # - name: Upload deb
@@ -1962,7 +1962,7 @@ jobs:
         run: |
           ftp_server="ftp://${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}@${{ secrets.FTP_SERVER }}/linux-sciter/${{ matrix.job.arch }}"
           for file in *.deb *.rpm; do
-            curl -T "$file" "$ftp_server/$file"
+            curl -s --ftp-ssl -T "$file" --insecure "sftp://$ftp_server/"
           done
 
       # - name: Upload deb
